--- a/.github/workflows/alert-manager.yml
+++ b/.github/workflows/alert-manager.yml
@@ -3,58 +3,145 @@ name: Publish alert-manager Docker Images
 on:
   release:
     types: [published]
+  push:
+    branches:
+      - "**"
+  pull_request:
+    branches:
+      - "**"
 
 jobs:
   push_to_registry:
     name: Push Docker Image to Docker Hub
     runs-on: ubuntu-latest
     steps:
+
       - name: Check out the repo
-        uses: actions/checkout@v2
-      - name: Set env
-        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+        uses: actions/checkout@v3
       - name: Run build-pre.sh
         working-directory: ./src/alert-manager/build
         run: |
           chmod +x ./build-pre.sh
           ./build-pre.sh
+
       - name: Log in to Docker Hub
-        uses: docker/login-action@v1
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+      - name: Docker meta-alert-handler
+        id: meta-alert-handler
+        uses: docker/metadata-action@v4
+        with:
+          # list of Docker images to use as base name for tags
+          images: |
+            ${{ github.event_name == 'pull_request' && github.event.pull_request.user.login || secrets.DOCKERHUB_USERNAME }}/alert-handler
+          flavor: |
+            latest=auto
+          # generate Docker tags based on the following events/attributes
+          tags: |
+            type=ref,event=tag
+            type=ref,event=branch
+            type=ref,event=pr
       - name: Push alert-handler to Docker Hub
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v4
         with:
           context: ./src/alert-manager
           file: ./src/alert-manager/build/alert-handler.common.dockerfile
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/alert-handler:${{ env.RELEASE_VERSION }}
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta-alert-handler.outputs.tags }}
+          labels: ${{ steps.meta-alert-handler.outputs.labels }}
+
+      - name: Docker meta-cert-expiration-checker
+        id: meta-cert-expiration-checker
+        uses: docker/metadata-action@v4
+        with:
+          # list of Docker images to use as base name for tags
+          images: |
+            ${{ github.event_name == 'pull_request' && github.event.pull_request.user.login || secrets.DOCKERHUB_USERNAME }}/cert-expiration-checker
+          flavor: |
+            latest=auto
+          # generate Docker tags based on the following events/attributes
+          tags: |
+            type=ref,event=tag
+            type=ref,event=branch
+            type=ref,event=pr
       - name: Push cert-expiration-checker to Docker Hub
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v4
         with:
           context: ./src/alert-manager
           file: ./src/alert-manager/build/cert-expiration-checker.common.dockerfile
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/cert-expiration-checker:${{ env.RELEASE_VERSION }}
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta-cert-expiration-checker.outputs.tags }}
+          labels: ${{ steps.meta-cert-expiration-checker.outputs.labels }}
+
+      - name: Docker meta-cluster-utilization
+        id: meta-cluster-utilization
+        uses: docker/metadata-action@v4
+        with:
+          # list of Docker images to use as base name for tags
+          images: |
+            ${{ github.event_name == 'pull_request' && github.event.pull_request.user.login || secrets.DOCKERHUB_USERNAME }}/cluster-utilization
+          flavor: |
+            latest=auto
+          # generate Docker tags based on the following events/attributes
+          tags: |
+            type=ref,event=tag
+            type=ref,event=branch
+            type=ref,event=pr
       - name: Push cluster-utilization to Docker Hub
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v4
         with:
           context: ./src/alert-manager
           file: ./src/alert-manager/build/cluster-utilization.common.dockerfile
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/cluster-utilization:${{ env.RELEASE_VERSION }}
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta-cluster-utilization.outputs.tags }}
+          labels: ${{ steps.meta-cluster-utilization.outputs.labels }}
+
+      - name: Docker meta-job-status-change-notification
+        id: meta-job-status-change-notification
+        uses: docker/metadata-action@v4
+        with:
+          # list of Docker images to use as base name for tags
+          images: |
+            ${{ github.event_name == 'pull_request' && github.event.pull_request.user.login || secrets.DOCKERHUB_USERNAME }}/job-status-change-notification
+          flavor: |
+            latest=auto
+          # generate Docker tags based on the following events/attributes
+          tags: |
+            type=ref,event=tag
+            type=ref,event=branch
+            type=ref,event=pr
       - name: Push job-status-change-notification to Docker Hub
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v4
         with:
           context: ./src/alert-manager
           file: ./src/alert-manager/build/job-status-change-notification.common.dockerfile
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/job-status-change-notification:${{ env.RELEASE_VERSION }}
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta-job-status-change-notification.outputs.tags }}
+          labels: ${{ steps.meta-job-status-change-notification.outputs.labels }}
+
+      - name: Docker meta-nvidia-gpu-low-perf-fixer
+        id: meta-nvidia-gpu-low-perf-fixer
+        uses: docker/metadata-action@v4
+        with:
+          # list of Docker images to use as base name for tags
+          images: |
+            ${{ github.event_name == 'pull_request' && github.event.pull_request.user.login || secrets.DOCKERHUB_USERNAME }}/nvidia-gpu-low-perf-fixer
+          flavor: |
+            latest=auto
+          # generate Docker tags based on the following events/attributes
+          tags: |
+            type=ref,event=tag
+            type=ref,event=branch
+            type=ref,event=pr
       - name: Push nvidia-gpu-low-perf-fixer to Docker Hub
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v4
         with:
           context: ./src/alert-manager
           file: ./src/alert-manager/build/nvidia-gpu-low-perf-fixer.common.dockerfile
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/nvidia-gpu-low-perf-fixer:${{ env.RELEASE_VERSION }}
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta-nvidia-gpu-low-perf-fixer.outputs.tags }}
+          labels: ${{ steps.meta-nvidia-gpu-low-perf-fixer.outputs.labels }}
