--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -1,14 +1,14 @@
 name: CI
 
 on:
+  release:
+    types: [published]
   push:
     branches:
-    - master
-    - pai-**
+      - "**"
   pull_request:
     branches:
-    - master
-    - pai-**
+      - "**"
 
 jobs:
   deployment:
@@ -21,7 +21,7 @@ jobs:
 
     steps:
     - name: Checkout
-      uses: actions/checkout@v1
+      uses: actions/checkout@v3
     - name: Use Python ${{ matrix.python }}
       uses: actions/setup-python@v1
       with:
@@ -49,7 +49,7 @@ jobs:
 
     steps:
     - name: Checkout
-      uses: actions/checkout@v1
+      uses: actions/checkout@v3
     - name: Use Python ${{ matrix.python }}
       uses: actions/setup-python@v1
       with:
@@ -74,7 +74,7 @@ jobs:
 
     steps:
     - name: Checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
     - name: Use Go ${{ matrix.go }}
       uses: actions/setup-go@v1
       with:
@@ -99,7 +99,7 @@ jobs:
 
     steps:
     - name: Checkout
-      uses: actions/checkout@v1
+      uses: actions/checkout@v3
     - name: Use Node ${{ matrix.node }}
       uses: actions/setup-node@v1
       with:
@@ -120,7 +120,7 @@ jobs:
 
     steps:
     - name: Checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
     - name: Use Node ${{ matrix.node }}
       uses: actions/setup-node@v1
       with:
@@ -150,7 +150,7 @@ jobs:
 
     steps:
     - name: Checkout
-      uses: actions/checkout@v1
+      uses: actions/checkout@v3
     - name: Use Node ${{ matrix.node }}
       uses: actions/setup-node@v1
       with:
@@ -173,7 +173,7 @@ jobs:
 
     steps:
     - name: Checkout
-      uses: actions/checkout@v1
+      uses: actions/checkout@v3
     - name: Use Node ${{ matrix.node }}
       uses: actions/setup-node@v1
       with:
