--- a/.github/workflows/internal-storage.yml
+++ b/.github/workflows/internal-storage.yml
@@ -3,39 +3,94 @@ name: Publish internal-storage Docker Image
 on:
   release:
     types: [published]
+  push:
+    branches:
+      - "**"
+  pull_request:
+    branches:
+      - "**"
 
 jobs:
   push_to_registry:
     name: Push Docker Image to Docker Hub
     runs-on: ubuntu-latest
     steps:
+
       - name: Check out the repo
-        uses: actions/checkout@v2
-      - name: Set env
-        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+        uses: actions/checkout@v3
+
       - name: Log in to Docker Hub
-        uses: docker/login-action@v1
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+      - name: Docker meta-internal-storage-barrier
+        id: meta-internal-storage-barrier
+        uses: docker/metadata-action@v4
+        with:
+          # list of Docker images to use as base name for tags
+          images: |
+            ${{ github.event_name == 'pull_request' && github.event.pull_request.user.login || secrets.DOCKERHUB_USERNAME }}/internal-storage-barrier
+          flavor: |
+            latest=auto
+          # generate Docker tags based on the following events/attributes
+          tags: |
+            type=ref,event=tag
+            type=ref,event=branch
+            type=ref,event=pr
       - name: Push internal-storage-barrier to Docker Hub
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v4
         with:
           context: ./src/internal-storage
           file: ./src/internal-storage/build/internal-storage-barrier.k8s.dockerfile
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/internal-storage-barrier:${{ env.RELEASE_VERSION }}
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta-internal-storage-barrier.outputs.tags }}
+          labels: ${{ steps.meta-internal-storage-barrier.outputs.labels }}
+
+      - name: Docker meta-internal-storage-create
+        id: meta-internal-storage-create
+        uses: docker/metadata-action@v4
+        with:
+          # list of Docker images to use as base name for tags
+          images: |
+            ${{ github.event_name == 'pull_request' && github.event.pull_request.user.login || secrets.DOCKERHUB_USERNAME }}/internal-storage-create
+          flavor: |
+            latest=auto
+          # generate Docker tags based on the following events/attributes
+          tags: |
+            type=ref,event=tag
+            type=ref,event=branch
+            type=ref,event=pr
       - name: Push internal-storage-create to Docker Hub
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v4
         with:
           context: ./src/internal-storage
           file: ./src/internal-storage/build/internal-storage-create.k8s.dockerfile
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/internal-storage-create:${{ env.RELEASE_VERSION }}
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta-internal-storage-create.outputs.tags }}
+          labels: ${{ steps.meta-internal-storage-create.outputs.labels }}
+
+      - name: Docker meta-internal-storage-delete
+        id: meta-internal-storage-delete
+        uses: docker/metadata-action@v4
+        with:
+          # list of Docker images to use as base name for tags
+          images: |
+            ${{ github.event_name == 'pull_request' && github.event.pull_request.user.login || secrets.DOCKERHUB_USERNAME }}/internal-storage-delete
+          flavor: |
+            latest=auto
+          # generate Docker tags based on the following events/attributes
+          tags: |
+            type=ref,event=tag
+            type=ref,event=branch
+            type=ref,event=pr
       - name: Push internal-storage-delete to Docker Hub
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v4
         with:
           context: ./src/internal-storage
           file: ./src/internal-storage/build/internal-storage-delete.k8s.dockerfile
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/internal-storage-delete:${{ env.RELEASE_VERSION }}
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta-internal-storage-delete.outputs.tags }}
+          labels: ${{ steps.meta-internal-storage-delete.outputs.labels }}
